--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -165,7 +165,7 @@ body {
     }
 
     .block-title {
-      font-size: 1.8em;
+      font-size: 2.5em;
       font-weight: 500;
       margin-bottom: 0.5em;
       line-height: 1em;
@@ -370,6 +370,7 @@ ol.yellow-number-list {
 
   li {
     position: relative;
+    margin: .2em 0;
 
     &:first-child {
       &:before {
