--- a/scss/_our-cases.scss
+++ b/scss/_our-cases.scss
@@ -3,6 +3,7 @@
   position: relative;
 
   .section-header {
+    align-items: baseline;
     .header-image {
       img {
         left: -10em;
